# supramark

./: .eslintrc.js  .eslintrc.types.cjs  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  FEATURES.zh.md  LICENSE  PROGRESS.md  PROGRESS.zh.md  README.md  README.zh.md  REUSE.toml  build.sh  deny.toml  features.manifest.json  jest.preset.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  wrangler.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
LICENSES/: Bitstream-Vera.txt
crates/d2-little/: Cargo.toml  README.md  UPSTREAM.md
crates/dagre/: Cargo.toml  UPSTREAM.md
crates/font-metrics/: Cargo.toml
crates/font-metrics/src/: ffi_callback.rs  host_callback.rs  lib.rs  ttf_parser.rs  ttf_parser_java_compat.rs
crates/font-metrics/src/static_dejavu/: mod.rs
crates/font-metrics/tests/: cross_impl_drift.rs  dynamic_vs_static_drift_spike.rs
crates/graphviz-anywhere/: .gitignore  CHANGELOG.md  README.md  UPSTREAM.md
crates/little-font-metrics/: Cargo.toml
crates/mermaid-little/: .gitignore  Cargo.toml  FEATURES.md  FEATURES.zh.md  PLAN.md  PROGRESS.zh.md  README.md  README.zh.md  UPSTREAM.md
crates/plantuml-little/: Cargo.toml  README.md  README.zh.md  UPSTREAM.md
crates/plantuml-little/.github/workflows/: ci.yml  regenerate-refs.yml  release.yml
crates/plantuml-little/scripts/: wasm-dot-wrapper.sh
crates/plantuml-little/src/: font_metrics.rs  lib.rs
crates/plantuml-little/src/layout/: activity.rs  flow.rs  graphviz.rs
crates/plantuml-little/src/parser/: activity.rs  common.rs
crates/plantuml-little/src/render/: svg_activity.rs
crates/plantuml-little/tests/: generate_reference.sh  integration.rs  klimt_verify.rs  known_failures.txt  reference_tests.rs  special_ext_reference_activity_split.rs  special_ext_reference_class_split.rs  special_ext_reference_seq_split.rs  special_ext_reference_state_split.rs  svek_verify.rs
crates/plantuml-little/tests/reference/: VERSION
crates/plantuml-little/tests/support/: package-lock.json  package.json  svg_compare.rs  viz_wasm_dot_oneshot.mjs  viz_wasm_runner.mjs  wasm_backend.rs
crates/supramark-markdown/: Cargo.toml  README.md
crates/supramark-markdown/src/: bin.rs  lib.rs  supramark.rs
crates/supramark-markdown/src/common/: ruler.rs  typekey.rs  utils.rs
crates/supramark-markdown/src/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs
crates/supramark-markdown/src/parser/: extset.rs  main.rs  mod.rs  node.rs
crates/supramark-markdown/src/parser/block/: mod.rs  state.rs
crates/supramark-markdown/src/parser/block/builtin/: block_parser.rs  mod.rs
crates/supramark-markdown/src/parser/core/: rule.rs
crates/supramark-markdown/src/parser/inline/: mod.rs  state.rs
crates/supramark-markdown/src/parser/inline/builtin/: inline_parser.rs  mod.rs  skip_text.rs
crates/supramark-markdown/src/plugins/: mod.rs  sourcepos.rs
crates/supramark-markdown/src/plugins/cmark/: mod.rs
crates/supramark-markdown/src/plugins/cmark/block/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  lheading.rs  list.rs  paragraph.rs  reference.rs
crates/supramark-markdown/src/plugins/cmark/inline/: autolink.rs  backticks.rs  emphasis.rs  entity.rs  escape.rs  image.rs  link.rs  newline.rs
crates/supramark-markdown/src/plugins/extra/: ext.rs  footnote.rs  heading_anchors.rs  linkify.rs  math.rs  mod.rs  strikethrough.rs  syntect.rs  tables.rs  typographer.rs
crates/supramark-markdown/src/plugins/html/: html_block.rs  html_inline.rs  mod.rs
crates/supramark-markdown/tests/: public_api.rs
crates/vison/: LICENSE  SPEC.md  UPSTREAM.md
crates/vison/vison-core/: Cargo.toml
docs/: dagre_rs_inconsistency_report.zh.md  index.md  overview.md  phase2_font_shim_plan.md  stratum3_execution_guide.zh.md
docs/.vitepress/: config.mts
docs/architecture/: DIAGRAM_ENGINE_TARGET.md  ENGINES_AND_CLI_PLAN.md  LICENSE_COMPATIBILITY.md  PROJECT_STRUCTURE_REPORT.md  ast-spec.md  dependency-graph.html  dependency-graph.md  diagram-semantic-ast.md  native-ffi-blockers.md
docs/examples/: config-examples.md  gallery.md  index.md  native-demo.md  react-native.md  react-web-csr.md  react-web-demo.md
docs/guide/: CI_SETUP.md  CREATE_FEATURE_GUIDE.md  architecture.md  concepts.md  custom-features.md  design-system.md  doc-system.md  getting-started.md
examples/: debug_fixtures.rs  er_diff_probe.rs  er_diff_probe_demos.rs  fc_diff_probe.rs
examples/config-examples/: README.md
examples/react-native/: App.tsx  README.md  metro.config.js  package.json  react-native.config.js
examples/react-web-csr/: README.md  package.json  vite.config.ts
profiles/: full.json  node-parser.json  rn-lite.json
scripts/: build-linux.sh  build-macos.sh  build-profile.ts  build-wasm.ts  build-windows.sh  doc-gen-example.ts  feature-create.ts  feature-del.ts  feature-preview-web.ts  features-gen-bundle.ts  license-check.ts  lint-types.ts  project-quality.ts  wasm-pack.ts
src/: detect.rs  font_data.rs  font_metrics.rs  lib.rs  preprocess.rs  text.rs
src/config/: defaults.rs  directive.rs  frontmatter.rs  mod.rs
src/cose_bilkent_js/: mod.rs  render.rs  v8_pow_shim.js
src/katex/: mod.rs  render.rs  sanitize.rs
src/layout/: block.rs  c4.rs  class.rs  cose_bilkent.rs  dagre_bridge.rs  er.rs  erd.rs  flowchart.rs  gantt.rs  gitgraph.rs  graphviz.rs  intersect.rs  ishikawa.rs  kanban.rs  mindmap.rs  mod.rs  packet.rs  pie.rs  quadrant.rs  radar.rs  requirement.rs  routing.rs  sankey_algo.rs  sequence.rs  state.rs  timeline.rs  treemap.rs  venn.rs  wardley.rs  xychart.rs
src/math/: js_number.rs  mod.rs  v8_trig.rs
src/model/: block.rs  class.rs  flowchart.rs  gantt.rs  mod.rs  (+11 more)
tests/: eval_smoke.rs  flowchart_inline.rs  gantt_byte_exact.rs  gen_svg.rs  generate_test_list.py  gitgraph_byte_exact.rs  journey_byte_exact.rs  katex_byte_exact.rs  known_failures.txt  known_ignored.txt  reference_tests.rs  state_byte_exact.rs  timeline_byte_exact.rs  treemap_byte_exact.rs  wave1_e2e.rs  xychart_byte_exact.rs
tools/: gen_font_data.py
(+480 files in other folders)
