[package]
name = "font-metrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# Apache-2.0 OR MIT for the Rust wrapper code (Rust-ecosystem standard
# dual licence). The embedded DejaVu Latin subsets bundled by
# `TtfParserMetrics::default_latin()` are a derived work of DejaVu
# (Bitstream Vera + Public Domain dual); downstream consumers
# redistributing the binary should preserve the DejaVu attribution.
# See REUSE.toml for the SPDX block and the upstream DejaVu copyright
# at https://dejavu-fonts.github.io/.
license = "Apache-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Font metrics abstraction for the *-little family: a Metrics trait with ttf-parser and host-callback implementations, backed by an embedded DejaVu Latin subset."
homepage = "https://github.com/kookyleo/supramark"
repository = "https://github.com/kookyleo/supramark"
keywords = ["font", "metrics", "dejavu", "svg", "diagram"]
categories = ["graphics", "text-processing"]
exclude = ["tests/"]

[features]
default = []

[dependencies]
# Generic TTF parsing for `TtfParserMetrics`. Pinned to a major version
# whose output the *-little crates are willing to track for
# determinism — bumping ttf-parser may shift glyph advance widths by
# fractional pixels and require regenerating any captured baselines.
ttf-parser = { version = "0.21", default-features = false, features = ["std"] }

# Wasm-only: bridge to a host-supplied text-measurement callback
# (e.g. `canvas.measureText`). Native builds skip these entirely;
# `HostCallbackMetrics` is `#[cfg(target_arch = "wasm32")]`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
name = "font_metrics"
path = "src/lib.rs"
