[package]
name = "font-metrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# Apache-2.0 OR MIT for the Rust wrapper code (Rust-ecosystem standard
# dual licence). The embedded DejaVu Latin subsets bundled by
# `TtfParserMetrics::default_latin()` are a derived work of DejaVu
# (Bitstream Vera + Public Domain dual); downstream consumers
# redistributing the binary should preserve the DejaVu attribution.
# See REUSE.toml for the SPDX block and the upstream DejaVu copyright
# at https://dejavu-fonts.github.io/.
license = "Apache-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Font metrics abstraction for the *-little family: a Metrics trait with ttf-parser and host-callback implementations, backed by an embedded DejaVu Latin subset."
homepage = "https://github.com/Actrium/supramark"
repository = "https://github.com/Actrium/supramark"
keywords = ["font", "metrics", "dejavu", "svg", "diagram"]
categories = ["graphics", "text-processing"]
exclude = ["tests/"]

[features]
# The metrics-* features below are reflective markers: this crate
# always compiles all three impls (the cfg gating is by `target_arch`,
# not by feature), but downstream crates (plantuml-little /
# mermaid-little / d2-little) take the host's feature flag and turn
# it into a `&'static dyn Metrics` selection. Declaring the names
# here lets cargo resolve `--features metrics-*` against this crate
# without "no such feature" errors, and gives `cargo doc` something
# to hang doc-cfg on.
default = []
# Embedded-TTF path (`TtfParserMetrics::default_latin()`) — always
# available; the feature is a no-op marker here.
metrics-ttf-parser = []
# Wasm host-callback path (`HostCallbackMetrics`) — compiled only on
# `target_arch = "wasm32"`; the feature is a no-op marker here.
metrics-host-callback = []
# Native FFI-callback path (`FfiCallbackMetrics`) — compiled on every
# non-wasm target; the feature is a no-op marker here. Host wires the
# Rust side via `supramark_install_metrics_callback`.
metrics-ffi-callback = []

[dependencies]
# Generic TTF parsing for `TtfParserMetrics`. Pinned to a major version
# whose output the *-little crates are willing to track for
# determinism — bumping ttf-parser may shift glyph advance widths by
# fractional pixels and require regenerating any captured baselines.
ttf-parser = { version = "0.21", default-features = false, features = ["std"] }

# Wasm-only: bridge to a host-supplied text-measurement callback
# (e.g. `canvas.measureText`). Native builds skip these entirely;
# `HostCallbackMetrics` is `#[cfg(target_arch = "wasm32")]`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
name = "font_metrics"
path = "src/lib.rs"
