# Inner [workspace] removed during supramark super-monorepo merge —
# all members are now listed by the root /Cargo.toml. See UPSTREAM.md
# for the rationale and how to re-apply on upstream sync.

[package]
name = "plantuml-little"
version = "1.2026.2-3"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later OR LGPL-3.0-or-later OR Apache-2.0 OR EPL-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .puml to .svg converter — byte-exact SVG parity with Java PlantUML"
homepage = "https://github.com/kookyleo/plantuml-little"
repository = "https://github.com/kookyleo/plantuml-little"
keywords = ["plantuml", "puml", "svg", "diagram", "uml"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "continue.md",
    "*.log",
    "*.rlib",
    "*.svg",
    "*.patch",
    "tmp_debug/",
    "tests/",
    "stdlib/",
    "fonts/",
    "docs/",
    ".trace-skill/",
    ".claude/",
    "scripts/",
    "packages/",
    "patch_java.py",
    "gen_font_data.py",
]

[[bin]]
name = "plantuml-little"
path = "src/main.rs"
# The CLI depends on std::process, env_logger, and on-disk file I/O, which
# are not available on wasm32. Compile the library only on that target.
# `metrics-static-dejavu` is auto-selected because the CLI must ship a
# concrete metrics impl; the byte-exact-with-Java DejaVu tables are the
# safest default for a standalone tool.
required-features = ["cli", "metrics-static-dejavu"]

[features]
default = ["cli", "remote"]
# CLI front-end (env_logger + main.rs). Disabled automatically on wasm32.
cli = ["dep:env_logger"]
# Remote-resource fetching via ureq (themes, images).
# Disabled automatically on wasm32 where ureq cannot link.
remote = ["dep:ureq"]

# Metrics-impl selection. The metrics-* family is mutually exclusive —
# exactly one impl must be active per build. The default feature set
# above deliberately selects NONE: production consumers MUST set
# `default-features = false` and explicitly pick one of the platform
# impls below, so the choice is visible in the consumer's Cargo.toml
# rather than implicit. `cargo test` here is unblocked by a dev-dep on
# `plantuml-little` itself (see [dev-dependencies]) that flips on
# `metrics-static-dejavu` so the existing 268+ byte-equal-with-Java
# reference SVG suite keeps running unchanged.
#
# - `metrics-static-dejavu` — byte-equal Java FontMetrics fixtures on
#   DejaVu Sans / Mono / Serif. **Test-fixture only.** Used by the
#   regression suite to verify the layout pipeline reproduces upstream
#   Java SVG bytes exactly. Not recommended for production: real hosts
#   render with their own font stack, not DejaVu.
# - `metrics-ttf-parser` — runtime measurement against a ttf-parser-
#   parsed font (defaults to font-metrics's embedded DejaVu Latin
#   subset). Native production builds that want dynamic metrics
#   without browser/RN bridging.
# - `metrics-host-callback` — defer measurement to a JS-side bridge
#   via `wasm-bindgen` extern. Used by the `plantuml-little-web` wasm
#   wrapper so layer-1 layout sees the exact widths the host browser
#   / RN-Skia will render with.
# - `metrics-ffi-callback` — reserved for the planned React-Native
#   native-FFI wrapper that will install a JS-side bridge through an
#   `extern "C"` callback. No impl yet; enabling this feature today
#   triggers a compile_error in `src/font_metrics.rs`.
metrics-static-dejavu = ["font_metrics_core/static-fixtures"]
metrics-ttf-parser = []
metrics-host-callback = []
metrics-ffi-callback = []

[dependencies]
# Shared font metrics. The `metrics-*` Cargo features above pick
# which `Metrics` impl `crate::font_metrics` routes through; the
# default (`metrics-static-dejavu`) flips on font-metrics's
# `static-fixtures` feature, preserving byte-exact Java parity for
# the 268+ reference SVG tests. The TtfParser / HostCallback impls
# (always compiled into font-metrics) become reachable when the
# corresponding `metrics-*` feature is selected instead.
#
# Imported as `font_metrics_core` (via `package =`) because plantuml-
# little's own `crate::font_metrics` wrapper module would otherwise
# shadow the dep in the crate-root namespace, breaking
# `pub use font_metrics::static_dejavu::*` in src/lib.rs.
font_metrics_core = { package = "font-metrics", path = "../font-metrics", version = "0.1" }
thiserror = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
regex = "1"
# graphviz-anywhere — native Graphviz bindings for the non-wasm code
# path. 0.1.8+ auto-downloads the matching libgraphviz_api shared
# library from the GitHub release, so consumers (and our own CI) need
# no GRAPHVIZ_ANYWHERE_DIR / submodule / pre-installed dot. Earlier
# releases additionally fixed (a) size_t overflow in the C wrapper on
# 64-bit targets, (b) WITH_EXPAT=ON for HTML label geometry, and
# (c) g++ linkage so libstdc++ vtables resolve on Ubuntu/Debian.
graphviz-anywhere = "0.1.8"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
ureq = { version = "3", optional = true }
url = "2"
# Use the pure-Rust miniz_oxide backend so the library links on wasm32
# (the zlib C backend requires a cross-compiled libz which isn't available
# on wasm32-unknown-unknown). Native builds get identical byte output.
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
# Self-cycle so `cargo test` auto-enables `metrics-static-dejavu` —
# the byte-equal-with-Java reference suite under `tests/` requires
# the static DejaVu fixtures. Production consumers explicitly opt
# into one of the `metrics-*` impls instead (see [features] above).
plantuml-little = { path = ".", features = ["metrics-static-dejavu"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
