[package]
name = "supramark-markdown"
version = "0.1.0"
authors = ["Supramark contributors"]
description = "Supramark-owned Rust Markdown parser and AST v2 output schema."
readme = "README.md"
keywords = ["markdown", "commonmark", "supramark"]
license = "Apache-2.0 AND MIT"
categories = ["text-processing", "parsing"]
edition = "2021"
autotests = false
autoexamples = false
autobenches = false

[lib]
name = "supramark_markdown"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "supramark-markdown"
path = "src/bin.rs"
doc = false

[[test]]
name = "public_api"
path = "tests/public_api.rs"

[features]
default = ["commonmark", "gfm", "diagram", "container", "linkify"]
commonmark = []
gfm = ["gfm-table", "gfm-strikethrough", "gfm-task-list"]
gfm-table = []
gfm-strikethrough = []
gfm-task-list = []
math = []
footnote = []
definition-list = []
raw-html = []
diagram = []
container = []
input = []
container-admonition = ["container"]
container-map = ["container"]
container-html = ["container", "raw-html"]
container-weather = ["container"]
container-vison = ["container"]
linkify = ["dep:linkify"]
syntect = ["dep:syntect"]

[dependencies]
# Lower range limit of these dependencies was manually checked to work with
# minimal versions possible, higher range limit is best guess based on semver.
# So older versions will not work, but newer versions might.
argparse     = ">= 0.2.1, < 0.3"
const_format = ">= 0.1.0, < 0.3"
derivative   = ">= 1.0.2, < 3"
derive_more  = ">= 0.99.0, < 1"
downcast-rs  = ">= 1.0.2, < 2"
entities     = ">= 0.1.0, < 2"
html-escape  = ">= 0.1.0, < 0.3"
linkify      = { version = ">= 0.5.0, < 0.11", optional = true }
mdurl        = ">= 0.3.1, < 0.4"
once_cell    = ">= 1.0.1, < 2"
readonly     = ">= 0.2.0, < 0.3"
regex        = ">= 1.0.0, < 2"
stacker      = ">= 0.1.2, < 0.2"
syntect      = { version = ">= 5.0.0, < 6", optional = true, default-features = false, features = ["default-fancy"] }
unicode-general-category = ">= 0.1.0, < 0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
